--- a/style/main.css
+++ b/style/main.css
@@ -71,9 +71,9 @@ header img {
 aside {
   position: absolute;
   top: 0;
-  right: -380px;
+  right: -40%;
   z-index: -1;
-  width: 380px;
+  width: 40%;
   height: 100%;
   -webkit-transition: 0.8s;
   transition: 0.8s;
