--- a/style/main.scss
+++ b/style/main.scss
@@ -69,9 +69,9 @@ header {
 aside {
     position: absolute;
     top: 0;
-    right: -380px;
+    right: -40%;
     z-index: -1;
-    width: 380px;
+    width: 40%;
     height: 100%;
 
     transition: 0.8s;
