--- a/style/main.css
+++ b/style/main.css
@@ -77,14 +77,13 @@ header img {
 aside {
   position: absolute;
   top: 0;
-  right: -40%;
+  right: -200px;
   z-index: -1;
-  width: 40%;
+  width: 200px;
   height: 100%;
   -webkit-transition: 0.8s;
   transition: 0.8s;
   background-color: #864646;
-  padding: 170px 120px;
 }
 
 aside img {
@@ -101,7 +100,11 @@ aside img:hover {
   transition: 1s;
 }
 
-aside a {
+aside nav {
+  margin: 150px 0 0 40px;
+}
+
+aside nav a {
   display: block;
   text-decoration: none;
   color: white;
@@ -110,7 +113,7 @@ aside a {
   line-height: 36px;
 }
 
-aside a:nth-child(3) {
+aside nav a:nth-child(2) {
   margin: 30px 0;
 }
 /*# sourceMappingURL=main.css.map */
