--- a/style/main.scss
+++ b/style/main.scss
@@ -74,15 +74,13 @@ header {
 aside {
     position: absolute;
     top: 0;
-    right: -40%;
+    right: -200px;
     z-index: -1;
-    width: 40%;
+    width: 200px;
     height: 100%;
 
     transition: 0.8s;
     background-color: #864646;
-
-    padding: 170px 120px;
 
     img {
         width: 50px;
@@ -97,17 +95,21 @@ aside {
         }
     }
 
-    a {
-        display: block;
-        text-decoration: none;
-        color: white;
+    nav {
 
-        font-weight: 500;
-        font-size: 24px;
-        line-height: 36px;
-
-        &:nth-child(3) {
-            margin: 30px 0;
+        margin: 150px 0 0 40px;
+        a {
+            display: block;
+            text-decoration: none;
+            color: white;
+    
+            font-weight: 500;
+            font-size: 24px;
+            line-height: 36px;
+    
+            &:nth-child(2) {
+                margin: 30px 0;
+            }
         }
     }
 }
