--- a/style/main.scss
+++ b/style/main.scss
@@ -47,6 +47,10 @@ header {
 }
 
 @media (max-width: 750px) {
+
+    body {
+        overflow: hidden;
+    }
     header {
         padding: 30px 50px;
 
