--- a/style/main.scss
+++ b/style/main.scss
@@ -72,13 +72,15 @@ header {
 .active {
     position: absolute;
     z-index: 5;
-    right: 0;
+    transform: translateX(0);
 }
 
 aside {
     position: absolute;
     top: 0;
-    right: -200px;
+    right: 0;
+
+    transform: translateX(+200px);
     z-index: -1;
     width: 200px;
     height: 100%;
