--- a/style/main.scss
+++ b/style/main.scss
@@ -82,6 +82,7 @@ aside {
     right: 0;
 
     transform: translateX(+200px);
+    transition: 0.8s;
     z-index: -1;
     width: 200px;
     height: 100%;
