--- a/style/main.css
+++ b/style/main.css
@@ -86,6 +86,8 @@ aside {
   right: 0;
   -webkit-transform: translateX(200px);
           transform: translateX(200px);
+  -webkit-transition: 0.8s;
+  transition: 0.8s;
   z-index: -1;
   width: 200px;
   height: 100%;
